# Dataiku-Technical-Assessment-OUALY-Ossama

./: .env  README.html  README.md  main.py  pyproject.toml  requirements.txt  teste_safety.py
chroma_db/: chroma.sqlite3
src/: config.py  seed_knowledge_base.py
src/agent/: react_agent.py  thinking.py
src/data/: knowledge_base.py  patterns.py  sample_tickets.py
src/tools/: __init__.py  chromaembeddings_kb_searcher.py  embeddings_kb_searcher.py  priority_scorer.py  reranker.py  safety_checker.py  supabase_vector_kb_searcher.py  ticket_categorizer.py
