[project]
name = "dataiku-technical-assessment-oualy-ossama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "numpy>=2.3.3",
    "openai==1.12.0",
    "pandas>=2.3.3",
    "python-dotenv==1.0.0",
    "tabulate==0.9.0",
    "tenacity==8.2.3",
]
