[project]
name = "dataiku-technical-assessment-oualy-ossama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==1.0.15",
    "colorama==0.4.6",
    "dotenv>=0.9.9",
    "numpy>=2.3.3",
    "openai>=1.30.0",
    "pandas>=2.3.3",
    "python-dotenv==1.0.0",
    "sentence-transformers>=5.1.2",
    "supabase>=2.24.0",
    "tabulate==0.9.0",
    "tenacity==8.2.3",
    "together>=1.5.30",
]
